dataset1235/2025-2/1955397009/users/3091828991/executions/1107611404_2132966528.log
== RUN (2025-08-22 18:21:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome:",Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:15:23)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome")
print("Nome,Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
NomeNome,Nome.upper
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
NomeNome,Nome.upper
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
NomeNome,Nome.upper
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
NomeNome,Nome.upper
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
NomeNome,Nome.upper
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
NomeNome,Nome.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:09:22)
-- CODE: 
nome = input("Nome: ")

print("nome:",nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:45)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:21:16)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome:",Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome:",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:36:08)
-- CODE: 
Nome = input("Nome: ")

print("Nome",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: Nome DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: Nome MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: Nome SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: Nome BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: Nome HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: Nome PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:08:21)
-- CODE: 
nome = input("Nome: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome:
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome:
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome:
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome:
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome:
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:17:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome")
print("Nome,Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
NomeNome,Nome.upper
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
NomeNome,Nome.upper
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
NomeNome,Nome.upper
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
NomeNome,Nome.upper
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
NomeNome,Nome.upper
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
NomeNome,Nome.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:02)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome: ")

print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: Nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:36:37)
-- CODE: 
Nome = input("Nome: ")

print("Nome",Nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: Nome DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: Nome MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: Nome SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: Nome BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: Nome HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: Nome PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:47)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:47)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 18:22:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome: Nome: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:33:19)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Frase = input(" ;")

print("Frase",Frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
;Frase DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
;Frase MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
;Frase SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
;Frase BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
;Frase HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
;Frase PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:34:15)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Frase = input("Frase:")

print("Frase",Frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Frase:Frase DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Frase:Frase MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Frase:Frase SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Frase:Frase BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Frase:Frase HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Frase:Frase PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:47)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:16:46)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome")
print("Nome,Nome.upper"()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome,Nome.upper"()))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:33:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Frase = input(" ;")

print("Frase:",Frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
;Frase: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
;Frase: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
;Frase: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
;Frase: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
;Frase: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
;Frase: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:29:25)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome: ")

print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: Nome: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:22:12)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome: Nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper()")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper()")
                              ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:18:29)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome:")
print("Nome,Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome:Nome,Nome.upper
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome:Nome,Nome.upper
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome:Nome,Nome.upper
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome:Nome,Nome.upper
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome:Nome,Nome.upper
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome:Nome,Nome.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 13:10:29)
-- CODE: 
nome = input("Nome: ")

print("nome:",nome.upper())
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Nome: nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Nome: nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Nome: nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Nome: nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Nome: nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Nome: nome: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:32:19)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Frase = input(" ;")

print("Frase:",Frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
;Frase: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
;Frase: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
;Frase: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
;Frase: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
;Frase: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
;Frase: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:16:55)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Nome")
print("Nome,Nome.upper"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
XXXX:5: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("Nome,Nome.upper"())
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome,Nome.upper"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 18:20:27)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Nome = input("Insira seu nome: ")
print("Nome;",Nome.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 5
    print("Nome;",Nome.upper")
                            ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
